<resources>
    <string name="app_name">PrizeSnob</string>

    <!-- Strings related to login -->

    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_register">Register</string>
    <string name="action_create">Create Account</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_create_in_short">Create</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_same_password">Passwords do not match</string>
    <string name="error_invalid_username">This username is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- PAGE NAMES -->
    <string name="app_register_title">Register</string>
    <string name="app_dashboard">Offer Feed</string>
    <string name="app_offerweb">Offer Action</string>

    <!-- PLACE HOLDER -->
     <string name="email">email@noemail.comm</string>
      <string name="welcome">Welcome!</string>


</resources>
