<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/colorAccent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainPages.PSRegisterPage">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:theme="@style/Progressbar.White"
        android:layout_gravity="center_horizontal"
        />

    <LinearLayout   android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:src="@drawable/mainlogo"
                android:layout_gravity="center"
                android:layout_height="80dp" />

         <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:textColorHint="#fff"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:theme="@style/EditTextHint"
                    android:id="@+id/user_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:textColor="@android:color/white"
                    android:inputType="text"
                    android:maxLines="1"


                     android:text="demoman1"
                    android:textColorHint="@android:color/black"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:textColorHint="#fff"


                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                android:layout_height="wrap_content">

                <AutoCompleteTextView

                    android:theme="@style/EditTextHint"
                    android:id="@+id/email_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:textColor="@android:color/white"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text="un@gggmail.com"
                    android:textColorHint="@android:color/white"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <!--  android:theme="@style/EditTextHint" -->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:textColorHint="#fff"

                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                android:layout_height="wrap_content">

                <EditText
                    android:theme="@style/EditTextHint"
                    android:id="@+id/password_register"
                    android:textColorHint="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:text="1234567"
                    android:textColor="@android:color/white"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:textColorHint="#fff"

                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                android:layout_height="wrap_content">

                <EditText

                    android:theme="@style/EditTextHint"
                    android:id="@+id/password_register_confirm"
                    android:textColorHint="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1234567"
                    android:hint="@string/prompt_confirm_password"
                    android:imeActionId="@+id/register"
                    android:imeActionLabel="@string/action_create_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@android:color/white"

                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/create_account_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:backgroundTint="@android:color/widget_edittext_dark"
                android:layout_marginTop="16dp"
                android:text="@string/action_create"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
